# BlockBreaker

./: pyproject.toml  requirements.txt
blockbreaker/: __main__.py  handler.py
blockbreaker/commands/: clear.py  exit.py  server.py  uuid.py
