[tool.poetry]
name = "blockbreaker"
version = "0.1.0"
description = "A CLI tool for Minecraft server penetration testing"
authors = ["KnoxTheDev <tuxltuxl001@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
